--- a/src/components/MantraSangrah/MantraSangrah.module.css
+++ b/src/components/MantraSangrah/MantraSangrah.module.css
@@ -7,9 +7,9 @@
 /* Mantra Sangrah - Back on the LEFT side with symmetrical offset */
 .triggerContainer {
     position: fixed;
-    left: 12px;
-    top: 640px;
-    /* Moved down further to be below Sri Yantra center */
+    left: 24px;
+    bottom: 30px;
+    top: auto;
     z-index: 1100;
     display: flex;
     flex-direction: column;
@@ -164,9 +164,9 @@
 /* Acharya Samvad - Back on the RIGHT side with symmetrical offset */
 .acharyaContainer {
     position: fixed;
-    right: 12px;
-    top: 640px;
-    /* Moved down further to be below Sri Yantra center */
+    right: 24px;
+    bottom: 30px;
+    top: auto;
     z-index: 1100;
     display: flex;
     flex-direction: column;
